@@ -21,6 +21,8 @@ Major changes since man-db 2.8.5:
 
 	* Fix failure to link libman using the Darwin linker.
 
+	* "apropos -w" now works when given a non-lower-case pattern.
+
 man-db 2.8.5 (5 January 2019)
 =============================
 
